--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,7 +100,7 @@
 }
 
 body {
-  @apply bg-secondary-background flex min-h-[100dvh] w-full items-center justify-center font-bold selection:bg-black selection:text-white portrait:h-[100dvh];
+  @apply bg-secondary-background flex min-h-[100dvh] w-full items-center justify-center font-bold selection:bg-black selection:text-white portrait:h-[100dvh] portrait:md:h-[800px];
 }
 
 .main::-webkit-scrollbar {
